# raylib-physfs

./: CMakeLists.txt  README.md  physfs_platform_raylib.c  raylib-physfs.h
.github/workflows/: Tests.yml
cmake/: FindPhysFS.cmake  FindRaylib.cmake
examples/: CMakeLists.txt
examples/core/: core_physfs_platform.c
test/: CMakeLists.txt  raylib-physfs-test.c
